<resources>


    <string name="app_name">Laundry Shop</string>
    <string name="title_home">Home</string>
    <string name="orders">Orders</string>
    <string name="category">Categories</string>
    <string name="account">Account</string>
    <string name="must_reads">Must-Reads</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallet">Wallet</string>
    <string name="no_premium_plan">no premium plan</string>
    <string name="charges">CHARGES</string>


    <string name="place_order">PLACE ORDER</string>
    <string name="refer_amp_earn"><![CDATA[REFER & EARN]]></string>
    <string name="_100"> ₹100</string>
    <string name="premium">PREMIUM</string>
    <string name="title_activity_charges">ChargesActivity</string>


    <string name="notifi">Notification</string>
    <string name="morder">My Orders</string>
    <string name="manaddre">Manage Address</string>
    <string name="mywall">My Wallet</string>
    <string name="rateus">Rate Us</string>
    <string name="help">Help</string>
    <string name="washing">Washing</string>
    <string name="all_garments_stacked_ntogether_and_packaged">All garments stacked together and packaged</string>
    <string name="tumble_dried_ngarments_folded_to_nperfection">Tumble Dried Garments Folded to Perfection</string>
    <string name="folding">Folding</string>
    <string name="garments">Garments</string>
    <string name="for_household_wear">For Household Wear</string>
    <string name="machine_wash_amp_tumble_dry"><![CDATA[Machine Wash & Tumble Dry]]></string>
    <string name="takes_72_hours_nexcept_for_heavy_stuff">Takes 72 Hours Except for Heavy Stuff</string>
    <string name="turnaround">Turnaround</string>
    <string name="each_garment_packed_nseparately_with_adequate_cushioning_nmaterials">Each garment packed separately with adequate cushioning materials</string>
    <string name="garments_steam_nironed_with_ncardboard_inserts">Garments Steam Ironed with Cardboard Inserts</string>
    <string name="garments_cleaned_nusing_chemicals_nstarching_as_required">Garments cleaned using Chemicals, Starching as required</string>
    <string name="for_heavy_clothes_nstain_removals">For Heavy Clothes, Stain Removals</string>
    <string name="read_more">Read more</string>
    <string name="packaging">Packaging</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="instagram">Laundry Shop</string>
    <string name="login">LogIn</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>


    <string name="facebook_app_id">506255203250080</string>
    <string name="fb_login_protocol_scheme">fb506255203250080</string>


</resources>
