<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/delivery"
        android:title="@string/orders" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/list"
        android:title="@string/category" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/user_profile"
        android:title="@string/account" />

    <item
        android:id="@+id/navigation_mustreads"
        android:icon="@drawable/rss"
        android:title="@string/must_reads" />

</menu>
